--- a/2월 8일 (금).md
+++ b/2월 8일 (금).md
@@ -39,8 +39,10 @@
 - EC2를 사용한 서버 배포 성공!!
 
   - 서버 코드를 깃헙에 푸쉬
-
   - AWS에서 EC2 인스턴스를 생성
   - window이기 때문에 puttygen을 사용해 pem키로 private key를 발급받음
   - putty를 이용해 instance에 접속, 깃헙에 올린 서버 코드를 다운받아 서버를 배포!
 
+
+
+- 윈도우에서 배포하기 힘들다..점점 윈도우에서 설치의 달인이 되어간다
